// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserList/TableActions hides delete element if entry is logged in user: dots menu 1`] = `
Object {
  "items": Array [
    Object {
      "key": "1",
      "label": <Popconfirm
        cancelText="No"
        okText="Yes"
        onConfirm={[Function]}
        title="Are you sure you want to delete this user?"
      />,
    },
    Object {
      "key": "2",
      "label": <Button
        data-testid="credentials"
        type="link"
      >
        <Link
          to="/admin/users/credentials/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
        >
          Credentials
        </Link>
      </Button>,
    },
    Object {
      "key": "3",
      "label": <Button
        className="viewDetails"
        data-testid="viewDetails"
        onClick={[Function]}
        type="link"
      >
        View Details
      </Button>,
    },
  ],
}
`;

exports[`components/UserList/TableActions renders correctly: divider 1`] = `
Object {
  "type": "vertical",
}
`;

exports[`components/UserList/TableActions renders correctly: dots menu 1`] = `
Object {
  "arrow": true,
  "children": <Button
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
    type="link"
  >
    <ForwardRef(MoreOutlined)
      className="more-options"
      data-testid="action-dropdown"
      style={
        Object {
          "fontSize": "16px",
          "margin": 0,
          "padding": 0,
        }
      }
    />
  </Button>,
  "menu": Object {
    "items": Array [
      Object {
        "key": "1",
        "label": <Popconfirm
          cancelText="No"
          okText="Yes"
          onConfirm={[Function]}
          title="Are you sure you want to delete this user?"
        >
          <Button
            danger={true}
            data-testid="delete-user"
            style={
              Object {
                "color": "#",
              }
            }
            type="link"
          >
            Delete
          </Button>
        </Popconfirm>,
      },
      Object {
        "key": "2",
        "label": <Button
          data-testid="credentials"
          type="link"
        >
          <Link
            to="/admin/users/credentials/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
          >
            Credentials
          </Link>
        </Button>,
      },
      Object {
        "key": "3",
        "label": <Button
          className="viewDetails"
          data-testid="viewDetails"
          onClick={[Function]}
          type="link"
        >
          View Details
        </Button>,
      },
    ],
  },
  "placement": "bottomRight",
  "trigger": Array [
    "click",
  ],
}
`;

exports[`components/UserList/TableActions renders correctly: edit 1`] = `
Object {
  "children": "Edit",
  "to": "/admin/users/edit/cab07278-c77b-4bc7-b154-bcbf01b7d35b",
}
`;

exports[`components/UserList/TableActions shows delete element if entry is not logged in user: dots menu 1`] = `
Object {
  "items": Array [
    Object {
      "key": "1",
      "label": <Popconfirm
        cancelText="No"
        okText="Yes"
        onConfirm={[Function]}
        title="Are you sure you want to delete this user?"
      >
        <Button
          danger={true}
          data-testid="delete-user"
          style={
            Object {
              "color": "#",
            }
          }
          type="link"
        >
          Delete
        </Button>
      </Popconfirm>,
    },
    Object {
      "key": "2",
      "label": <Button
        data-testid="credentials"
        type="link"
      >
        <Link
          to="/admin/users/credentials/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
        >
          Credentials
        </Link>
      </Button>,
    },
    Object {
      "key": "3",
      "label": <Button
        className="viewDetails"
        data-testid="viewDetails"
        onClick={[Function]}
        type="link"
      >
        View Details
      </Button>,
    },
  ],
}
`;

exports[`components/UserList/TableActions shows delete element if entry is not logged in user: yes button 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-primary ant-btn-sm"
  type="button"
>
  <span>
    Yes
  </span>
</button>
`;
